--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "events-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/index.js",
+    "lint": "eslint ./src",
+    "format": "prettier --write ."
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +17,9 @@
     "firebase": "^9.6.6",
     "firebase-admin": "^10.0.2",
     "mongoose": "^6.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.12.0",
+    "prettier": "^2.6.1"
   }
 }
